--- a/index.html
+++ b/index.html
@@ -14,19 +14,22 @@
 
     <!--меню главной навигации-->
     <header class="page-header">
-        <nav>
-                <a href="#" class="logo" >Web<span class="logo-color">Studio</span> </a>
-                <ul class="site-nav">
-                    <li> <a href="./index.html">Студия</a></li>
-                    <li> <a href="./portfolio.html">Портфолио</a> </li>
-                    <li> <a href="">Контакты</a></li>
-                </ul>
-        </nav>   
-        <ul class="header-contacts">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
-        </ul>     
+        <div class="conteiner">
+            <nav class="nav">
+                    <a href="#" class="logo" >Web<span class="logo-color">Studio</span> </a>
+                    <ul class="site-nav">
+                        <li> <a href="./index.html">Студия</a></li>
+                        <li> <a href="./portfolio.html">Портфолио</a> </li>
+                        <li> <a href="">Контакты</a></li>
+                    </ul>
+            </nav>   
+            <ul class="header-contacts">
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+            </ul>   
+        </div>  
     </header>
+    
     <!--Контент из секций-->
     <main>
 
