Оформляет студию без футера

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> goit-markup-hw-01</title>
+    <title> goit-markup-hw-03</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet"
@@ -44,21 +44,21 @@
         <section class="advantages">
             <div class="conteiner">
                 <h2 class="invisible-title">Наши преимущества</h2>
-                <ul >
-                    <li>
-                        <h3>Внимание к деталям</h3>  
+                <ul class="advantages-elements">
+                    <li class="advantages-element" >
+                        <h3 class="name">Внимание к деталям</h3>  
                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>   
                     </li>
-                    <li>
-                        <h3>Пунктуальность</h3>  
+                    <li class="advantages-element">
+                        <h3 class="name">Пунктуальность</h3>  
                         <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>   
                     </li>
-                    <li>
-                        <h3>Планирование</h3>  
+                    <li class="advantages-element">
+                        <h3 class="name">Планирование</h3>  
                         <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>   
                     </li>
-                    <li>
-                        <h3>Современные технологии</h3>  
+                    <li class="advantages-element">
+                        <h3 class="name">Современные технологии</h3>  
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>   
                     </li>                    
                 </ul>
@@ -68,23 +68,23 @@
          <!--секция чем мы занимаемся-->
         <section class="activity">
             <div class="conteiner">
-                <h2>Чем мы занимаемся</h2>
-                <ul>
-                      <li> 
+                <h2 class="activity-titel">Чем мы занимаемся</h2>
+                <ul class="activity-variants">
+                      <li class="activity-variant"> 
                             <a href="#"><img src="./img/z1.png" 
                                             alt="написание документации" 
                                             width="370" 
                                             height="294">
                             </a> 
                      </li>
-                      <li>
+                      <li class="activity-variant">
                             <a href=""><img src="./img/z2.png" 
                                             alt="разработка мобильных приложения" 
                                             width="370" 
                                             height="294">
                             </a>
                       </li>
-                       <li>
+                       <li class="activity-variant">
                             <a href=""><img src="./img/z3.png" 
                                             alt="подбор цвета с помощю приложения" 
                                             width="370" 
@@ -97,48 +97,48 @@
         </section>
             
         <!--секция наша команда-->
-        <section class="comands">
+        <section class="comand">
             <div class="conteiner">
-                <h2>Наша команда</h2>
-                <ul>
-                    <li>
+                <h2 class="comand-titel" >Наша команда</h2>
+                <ul class="comand-members">
+                    <li class="comand-member">
                         <a href="#">
-                            <img src="./img/nk1.jpg" 
+                            <img class="photograph" src="./img/nk1.jpg" 
                                 alt="парень в очках и коричневой рубашке" 
                                 width="270"
                                 height="260">
-                            <h3>Игорь Демьяненко</h3>
-                            <p>Product Designer</p>
+                            <h3 class="fuul-name">Игорь Демьяненко</h3>
+                            <p class="comand-position">Product Designer</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="comand-member">
                         <a href="#">
-                            <img src="./img/nk2.jpg" 
+                            <img class="photograph" src="./img/nk2.jpg" 
                                 alt="девушка в очках и черном педжаке" 
                                 width="270"
                                 height="260">
-                            <h3>Ольга Репина</h3>
-                            <p>Frontend Developer</p>
+                            <h3 class="fuul-name">Ольга Репина</h3>
+                            <p class="comand-position">Frontend Developer</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="comand-member">
                         <a href="#">
-                            <img src="./img/nk3.jpg" 
+                            <img class="photograph" src="./img/nk3.jpg" 
                                 alt="парень в белой рубашке" 
                                 width="270"
                                 height="260">
-                            <h3>Николай Тарасов</h3>
-                            <p>Marketing</p>
+                            <h3 class="fuul-name">Николай Тарасов</h3>
+                            <p class="comand-position">Marketing</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="comand-member">
                         <a href="#">
-                            <img src="./img/nk4.jpg" 
+                            <img class="photograph" src="./img/nk4.jpg" 
                                 alt="парень в очках и черной футболке" 
                                 width="270"
                                 height="260">
-                            <h3>Михаил Ермаков</h3>
-                            <p>UI Designer</p>
+                            <h3 class="fuul-name">Михаил Ермаков</h3>
+                            <p class="comand-position">UI Designer</p>
                         </a>
                     </li>   
                 </ul>
