оформляет студию для дз3 и добавляет хедер и футер в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <!--меню главной навигации-->
     <header class="page-header">
         <div class="conteiner">
-             <a href="#" class="logo" >Web<span class="logo-color">Studio</span> </a>
+             <a href="#" class="logo">Web<span class="logo-color">Studio</span> </a>
                 <nav class="nav">
                     <ul class="site-nav">
                         <li class="item"> <a class="header-links" href="./index.html" >Студия</a></li>
@@ -26,8 +26,8 @@
                     </ul>
                 </nav>   
             <ul class="header-contacts">
-                <li><a class="mail-link header-links" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="header-links" href="tel:380961111111">+38 096 111 11 11</a></li>
+                <li class="contact-item"><a class="header-links" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contact-item"><a class="header-links" href="tel:380961111111">+38 096 111 11 11</a></li>
             </ul>   
         </div>  
     </header>
@@ -152,23 +152,22 @@
         <section>
             <div class="conteiner">
                 <h2 class="invisible-title">Подвал</h2>
-                <a href="#" class="logo">Web<span class="logo-color-footer">Studio</span> </a>
-                <address>
-                    <ul>
-                        <li>
+                <a class="logo-footer" href="#">Web<span class="logo-color-footer">Studio</span> </a>
+                <address> 
+                    <ul class="contacts">
+                        <li class="contacts-element">
                             <p>г. Киев, пр-т Леси Украинки, 26</p>
                         </li>
-                        <li class="contacts-foter">
+                        <li class="contacts-element contacts-foter">
                             <a href="mailto:info@example.com">info@example.com</a>
                         </li>
-                        <li class="contacts-foter">
+                        <li class="contacts-element contacts-foter">
                             <a href="tel:380991111111">+38 099 111 11 11</a>
-                        </li>
-                                            
+                        </li>                     
                     </ul>
                 </address>
             </div>
-        </section>
+        </section>        
     </footer>
 </body>
 
