--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> goit-markup-hw-02</title>
+    <title> goit-markup-hw-03</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet"
@@ -15,7 +15,7 @@
 <body>
 
     <!--меню главной навигации-->
-    <header class="page-header">
+    <header class="page-header border-botton">
         <div class="conteiner">
              <a href="#" class="logo">Web<span class="logo-color">Studio</span> </a>
                 <nav class="nav">
@@ -36,110 +36,135 @@
         <section class="our-projects">
             <div class="conteiner">
                 <h1 class="invisible-title">Наши проэкты</h1>
-                <ul class="filter-projects">
-                    <li>
+                <ul class="filters-button">
+                    <li class="filter-button">
                         <button type="button" class="portfolio-button">Все</button>
                     </li>
-                    <li>
+                    <li class="filter-button">
                         <button type="button" class="portfolio-button">Веб-сайты</button>
                     </li>
-                    <li>
+                    <li class="filter-button">
                         <button type="button" class="portfolio-button">Приложения</button>
                     </li>
-                    <li>
+                    <li class="filter-button">
                         <button type="button" class="portfolio-button">Дизайн</button>
                     </li>
-                    <li>
+                    <li class="filter-button">
                         <button type="button" class="portfolio-button">Маркетинг</button>
                     </li>
                 </ul>
-                <ul class="project-view">
-                    <li>
-                        <a href="#">
-                            <img src="./img/portf1.png" alt="макбук-про">
-                            <h2>Технокряк</h2>
-                            <p>Веб-сайт</p>
-                        </a>
-                        
+                <ul class="projects-view">
+                    <li class="project-elements">
+                        <a  href="#">
+                            <img class="project-img" src="./img/portf1.png" alt="макбук-про">
+                            <div class="background-end">
+                                <h2 class="project-titel">Технокряк</h2>
+                                <p class="project-type">Веб-сайт</p>
+                            </div>
+                        </a>                        
                     </li>
-                    <li>
-                        <a href="#">
-                            <img src="./img/portf2.png" 
+
+                    <li class="project-elements">
+                        <a  href="#">
+                            <img class="project-img" src="./img/portf2.png" 
                                 alt="два баскетболиста с мячем" 
                                 width="370"
                                 height="294">
-                            <h2>Постер New Orlean vs Golden Star</h2>
-                            <p>Дизайн</p>
+                            <div class="background-end">    
+                                <h2 class="project-titel">Постер New Orlean vs Golden Star</h2>
+                                <p class="project-type">Дизайн</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <img src="./img/portf3.png" 
+
+                    <li class="project-elements">
+                        <a  href="#">
+                            <img class="project-img" src="./img/portf3.png" 
                                 alt="логотип ресторана Seafood"
                                 width="370"
                                 height="294">
-                            <h2>Ресторан Seafood</h2>
-                            <p>Приложение</p>
+                            <div class="background-end">
+                                <h2 class="project-titel">Ресторан Seafood</h2>
+                                <p class="project-type">Приложение</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <img src="./img/portf4.png" 
+
+                    <li class="project-elements">
+                        <a  href="#">
+                            <img class="project-img" src="./img/portf4.png" 
                                 alt="наушники"
                                 width="370"
                                 height="294">
-                            <h2>Проект Prime</h2>
-                            <p>Маркетинг</p>
+                            <div class="background-end">
+                                <h2 class="project-titel">Проект Prime</h2>
+                                <p class="project-type">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <img src="./img/portf5.png" 
+
+                    <li class="project-elements">
+                        <a  href="#">
+                            <img class="project-img" src="./img/portf5.png" 
                                 alt="две упаковочных коробки"
                                 width="370"
                                 height="294">
-                            <h2>Проект Boxes</h2>
-                            <p>Приложение</p>
+                            <div class="background-end">
+                                <h2 class="project-titel">Проект Boxes</h2>
+                                <p class="project-type">Приложение</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <img src="./img/portf6.png" 
+
+                    <li class="project-elements">
+                        <a class="project-img" href="#">
+                            <img class="project-img" src="./img/portf6.png" 
                                 alt="монитор Apple"
                                 width="370"
                                 height="294">
-                            <h2>Inspiration has no Borders</h2>
-                            <p>Веб-сайт</p>
+                            <div class="background-end">
+                                <h2 class="project-titel">Inspiration has no Borders</h2>
+                                <p class="project-type">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
+
+                    <li class="project-elements">
                         <a href="#">
-                            <img src="./img/portf7.png" 
+                            <img class="project-img" src="./img/portf7.png" 
                                 alt="книга Limited Edition"
                                 width="370"
                                 height="294">
-                            <h2>Издание Limited Edition</h2>
-                            <p>Дизайн</p>
+                            <div class="background-end">
+                                <h2 class="project-titel">Издание Limited Edition</h2>
+                                <p class="project-type">Дизайн</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
+
+                    <li class="project-elements">
                         <a href="#">
-                            <img src="./img/portf8.png" 
+                            <img class="project-img" src="./img/portf8.png" 
                                 alt="бирка LAB"
                                 width="370"
                                 height="294">
-                            <h2>Проект LAB</h2>
-                            <p>Маркетинг</p>
+                            <div class="background-end">
+                                <h2 class="project-titel">Проект LAB</h2>
+                                <p class="project-type">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
+
+                    <li class="project-elements">
                         <a href="#">
-                            <img src="./img/portf9.png" 
+                            <img class="project-img" src="./img/portf9.png" 
                                 alt="макбук-про"
                                 width="370"
                                 height="294">
-                            <h2>Growing Business</h2>
-                            <p>Приложение</p>
+                            <div class="background-end">
+                                <h2 class="project-titel">Growing Business</h2>
+                                <p class="project-type">Приложение</p>
+                            </div>
                         </a>
                     </li>
                     
