--- a/portfolio.html
+++ b/portfolio.html
@@ -35,158 +35,160 @@
     <main>
         <section class="our-projects">
             <div class="conteiner">
-                <h1 class="invisible-title">Наши проэкты</h1>
-                <ul class="filters-button">
-                    <li class="filter-button">
-                        <button type="button" class="portfolio-button">Все</button>
-                    </li>
-                    <li class="filter-button">
-                        <button type="button" class="portfolio-button">Веб-сайты</button>
-                    </li>
-                    <li class="filter-button">
-                        <button type="button" class="portfolio-button">Приложения</button>
-                    </li>
-                    <li class="filter-button">
-                        <button type="button" class="portfolio-button">Дизайн</button>
-                    </li>
-                    <li class="filter-button">
-                        <button type="button" class="portfolio-button">Маркетинг</button>
-                    </li>
-                </ul>
-                <ul class="projects-view">
-                    <li class="project-elements">
-                        <a  href="#">
-                            <img class="project-img" src="./img/portf1.png" alt="макбук-про">
-                            <div class="background-end">
-                                <h2 class="project-titel">Технокряк</h2>
-                                <p class="project-type">Веб-сайт</p>
-                            </div>
-                        </a>                        
-                    </li>
+                <div class="projects-sec">
+                    <h1 class="invisible-title">Наши проэкты</h1>
+                    <ul class="filters-button">
+                        <li class="filter-button">
+                            <button type="button" class="portfolio-button">Все</button>
+                        </li>
+                        <li class="filter-button">
+                            <button type="button" class="portfolio-button">Веб-сайты</button>
+                        </li>
+                        <li class="filter-button">
+                            <button type="button" class="portfolio-button">Приложения</button>
+                        </li>
+                        <li class="filter-button">
+                            <button type="button" class="portfolio-button">Дизайн</button>
+                        </li>
+                        <li class="filter-button">
+                            <button type="button" class="portfolio-button">Маркетинг</button>
+                        </li>
+                    </ul>
+                    <ul class="projects-view">
+                        <li class="project-elements">
+                            <a  href="#">
+                                <img class="project-img" src="./img/portf1.png" alt="макбук-про">
+                                <div class="background-end">
+                                    <h2 class="project-titel">Технокряк</h2>
+                                    <p class="project-type">Веб-сайт</p>
+                                </div>
+                            </a>                        
+                        </li>
 
-                    <li class="project-elements">
-                        <a  href="#">
-                            <img class="project-img" src="./img/portf2.png" 
-                                alt="два баскетболиста с мячем" 
-                                width="370"
-                                height="294">
-                            <div class="background-end">    
-                                <h2 class="project-titel">Постер New Orlean vs Golden Star</h2>
-                                <p class="project-type">Дизайн</p>
-                            </div>
-                        </a>
-                    </li>
+                        <li class="project-elements">
+                            <a  href="#">
+                                <img class="project-img" src="./img/portf2.png" 
+                                    alt="два баскетболиста с мячем" 
+                                    width="370"
+                                    height="294">
+                                <div class="background-end">    
+                                    <h2 class="project-titel">Постер New Orlean vs Golden Star</h2>
+                                    <p class="project-type">Дизайн</p>
+                                </div>
+                            </a>
+                        </li>
 
-                    <li class="project-elements">
-                        <a  href="#">
-                            <img class="project-img" src="./img/portf3.png" 
-                                alt="логотип ресторана Seafood"
-                                width="370"
-                                height="294">
-                            <div class="background-end">
-                                <h2 class="project-titel">Ресторан Seafood</h2>
-                                <p class="project-type">Приложение</p>
-                            </div>
-                        </a>
-                    </li>
+                        <li class="project-elements">
+                            <a  href="#">
+                                <img class="project-img" src="./img/portf3.png" 
+                                    alt="логотип ресторана Seafood"
+                                    width="370"
+                                    height="294">
+                                <div class="background-end">
+                                    <h2 class="project-titel">Ресторан Seafood</h2>
+                                    <p class="project-type">Приложение</p>
+                                </div>
+                            </a>
+                        </li>
 
-                    <li class="project-elements">
-                        <a  href="#">
-                            <img class="project-img" src="./img/portf4.png" 
-                                alt="наушники"
-                                width="370"
-                                height="294">
-                            <div class="background-end">
-                                <h2 class="project-titel">Проект Prime</h2>
-                                <p class="project-type">Маркетинг</p>
-                            </div>
-                        </a>
-                    </li>
+                        <li class="project-elements">
+                            <a  href="#">
+                                <img class="project-img" src="./img/portf4.png" 
+                                    alt="наушники"
+                                    width="370"
+                                    height="294">
+                                <div class="background-end">
+                                    <h2 class="project-titel">Проект Prime</h2>
+                                    <p class="project-type">Маркетинг</p>
+                                </div>
+                            </a>
+                        </li>
 
-                    <li class="project-elements">
-                        <a  href="#">
-                            <img class="project-img" src="./img/portf5.png" 
-                                alt="две упаковочных коробки"
-                                width="370"
-                                height="294">
-                            <div class="background-end">
-                                <h2 class="project-titel">Проект Boxes</h2>
-                                <p class="project-type">Приложение</p>
-                            </div>
-                        </a>
-                    </li>
+                        <li class="project-elements">
+                            <a  href="#">
+                                <img class="project-img" src="./img/portf5.png" 
+                                    alt="две упаковочных коробки"
+                                    width="370"
+                                    height="294">
+                                <div class="background-end">
+                                    <h2 class="project-titel">Проект Boxes</h2>
+                                    <p class="project-type">Приложение</p>
+                                </div>
+                            </a>
+                        </li>
 
-                    <li class="project-elements">
-                        <a class="project-img" href="#">
-                            <img class="project-img" src="./img/portf6.png" 
-                                alt="монитор Apple"
-                                width="370"
-                                height="294">
-                            <div class="background-end">
-                                <h2 class="project-titel">Inspiration has no Borders</h2>
-                                <p class="project-type">Веб-сайт</p>
-                            </div>
-                        </a>
-                    </li>
+                        <li class="project-elements">
+                            <a class="project-img" href="#">
+                                <img class="project-img" src="./img/portf6.png" 
+                                    alt="монитор Apple"
+                                    width="370"
+                                    height="294">
+                                <div class="background-end">
+                                    <h2 class="project-titel">Inspiration has no Borders</h2>
+                                    <p class="project-type">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </li>
 
-                    <li class="project-elements">
-                        <a href="#">
-                            <img class="project-img" src="./img/portf7.png" 
-                                alt="книга Limited Edition"
-                                width="370"
-                                height="294">
-                            <div class="background-end">
-                                <h2 class="project-titel">Издание Limited Edition</h2>
-                                <p class="project-type">Дизайн</p>
-                            </div>
-                        </a>
-                    </li>
+                        <li class="project-elements">
+                            <a href="#">
+                                <img class="project-img" src="./img/portf7.png" 
+                                    alt="книга Limited Edition"
+                                    width="370"
+                                    height="294">
+                                <div class="background-end">
+                                    <h2 class="project-titel">Издание Limited Edition</h2>
+                                    <p class="project-type">Дизайн</p>
+                                </div>
+                            </a>
+                        </li>
 
-                    <li class="project-elements">
-                        <a href="#">
-                            <img class="project-img" src="./img/portf8.png" 
-                                alt="бирка LAB"
-                                width="370"
-                                height="294">
-                            <div class="background-end">
-                                <h2 class="project-titel">Проект LAB</h2>
-                                <p class="project-type">Маркетинг</p>
-                            </div>
-                        </a>
-                    </li>
+                        <li class="project-elements">
+                            <a href="#">
+                                <img class="project-img" src="./img/portf8.png" 
+                                    alt="бирка LAB"
+                                    width="370"
+                                    height="294">
+                                <div class="background-end">
+                                    <h2 class="project-titel">Проект LAB</h2>
+                                    <p class="project-type">Маркетинг</p>
+                                </div>
+                            </a>
+                        </li>
 
-                    <li class="project-elements">
-                        <a href="#">
-                            <img class="project-img" src="./img/portf9.png" 
-                                alt="макбук-про"
-                                width="370"
-                                height="294">
-                            <div class="background-end">
-                                <h2 class="project-titel">Growing Business</h2>
-                                <p class="project-type">Приложение</p>
-                            </div>
-                        </a>
-                    </li>
-                    
-                </ul>
+                        <li class="project-elements">
+                            <a href="#">
+                                <img class="project-img" src="./img/portf9.png" 
+                                    alt="макбук-про"
+                                    width="370"
+                                    height="294">
+                                <div class="background-end">
+                                    <h2 class="project-titel">Growing Business</h2>
+                                    <p class="project-type">Приложение</p>
+                                </div>
+                            </a>
+                        </li>
+                        
+                    </ul>
+               </div>
             </div>
         </section>
     </main>
     <!--Контактная информация подвал-->
     <footer class="page-footer">
-        <section>
+        <section class="footer-sec">
             <div class="conteiner">
                 <h2 class="invisible-title">Подвал</h2>
                 <a class="logo-footer" href="#">Web<span class="logo-color-footer">Studio</span> </a>
                 <address> 
                     <ul class="contacts">
-                        <li class="contacts-element">
+                        <li class="contact-element">
                             <p>г. Киев, пр-т Леси Украинки, 26</p>
                         </li>
-                        <li class="contacts-element contacts-foter">
+                        <li class="contact-element contacts-foter">
                             <a href="mailto:info@example.com">info@example.com</a>
                         </li>
-                        <li class="contacts-element contacts-foter">
+                        <li class="contact-element contacts-foter">
                             <a href="tel:380991111111">+38 099 111 11 11</a>
                         </li>                     
                     </ul>
